<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/bottom_navigation"
    android:id="@+id/homeView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:text="@string/hom_heade_label"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textColor="@color/green_500"
            android:text="@string/hom_header_Sublabel"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:text="@string/hom_desc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/smiley"
                android:paddingTop="10dp"
                android:src="@drawable/emoji1"
                android:background="@color/white"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc1"
                android:textSize="16dp"
                android:textStyle="italic"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/smiley"
                android:paddingTop="10dp"
                android:src="@drawable/emoji2"
                android:background="@color/white"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc2"
                android:textSize="16dp"
                android:textStyle="italic"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@drawable/emoji1"
                android:paddingTop="10dp"
                android:textSize="48dp"
                android:background="@color/white"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="16dp"
                android:textStyle="italic"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@drawable/emoji3"
                android:paddingTop="10dp"
                android:textSize="48dp"
                android:background="@color/white"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading4"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc4"
                android:textSize="16dp"
                android:textStyle="italic"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@drawable/emoji1"
                android:paddingTop="10dp"
                android:textSize="48dp"
                android:background="@color/white"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading5"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc5"
                android:textSize="16dp"
                android:textStyle="italic"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@drawable/emoji3"
                android:paddingTop="10dp"
                android:textSize="48dp"
                android:background="@color/white"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading6"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc6"
                android:textSize="16dp"
                android:textStyle="italic"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:itemBackground="@color/green_500"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>